@@ -644,14 +644,6 @@ class Builder(lexer.LexBuilder):
         """
         diff_amount = None
         meta = new_metadata(filename, lineno, kvlist)
-
-        # Only support explicit tolerance syntax if the experiment is enabled.
-        if (tolerance is not None and
-            not self.options["experiment_explicit_tolerances"]):
-            self.errors.append(
-                ParserError(meta, "Tolerance syntax is not supported", None))
-            tolerance = '__tolerance_syntax_not_supported__'
-
         return Balance(meta, date, account, amount, tolerance, diff_amount)
 
     def event(self, filename, lineno, date, event_type, description, kvlist):
